# FisGoWiFi

./: CMakeLists.txt
src/: lib_fisgo_wifi.cpp  lib_fisgo_wifi_db.cpp
src/include/: lib_fisgo_wifi.h  lib_fisgo_wifi_db.h
